# DemoDashboard-swagger-2.0.yml
@@ -276,6 +276,168 @@ paths:
         required: false
       tags:
       - DemoStats1
+  /rest/DemoStats2/{row_id}:
+    post:
+      summary: Create a new DemoStats2business object record
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-demostats2-create
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/DemoStats2'
+          description: Success in creating a new business object record
+        '400':
+          schema:
+            $ref: '#/definitions/Error400'
+          description: Bad request
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      - schema:
+          $ref: '#/definitions/DemoStats2'
+        in: body
+        name: body
+      tags:
+      - DemoStats2
+      consumes:
+      - application/json
+    get:
+      summary: Get a DemoStats2 business object record
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-demostats2-get
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/DemoStats2'
+          description: Success in getting a single business object record
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+        '404':
+          schema:
+            $ref: '#/definitions/Error404'
+          description: Not found
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      - in: query
+        name: _inline_documents
+        description: Inline documents?
+        type: boolean
+        required: false
+      - in: query
+        name: _inline_thumbnails
+        description: Inline documents' thumbnails?
+        type: boolean
+        required: false
+      - in: query
+        name: _inline_objects
+        description: Inline objects?
+        type: boolean
+        required: false
+      tags:
+      - DemoStats2
+    delete:
+      summary: Delete a DemoStats2 business object record
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-demostats2-delete
+      responses:
+        '200':
+          description: Success in deleting a business object record
+        '400':
+          schema:
+            $ref: '#/definitions/Error400'
+          description: Bad request
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+        '404':
+          schema:
+            $ref: '#/definitions/Error404'
+          description: Not found
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      tags:
+      - DemoStats2
+    put:
+      summary: Update a DemoStats2business object record
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-demostats2-update
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/DemoStats2'
+          description: Success in updating a business object record
+        '400':
+          schema:
+            $ref: '#/definitions/Error400'
+          description: Bad request
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+        '404':
+          schema:
+            $ref: '#/definitions/Error404'
+          description: Not found
+      parameters:
+      - in: path
+        name: row_id
+        description: Row ID (or empty or _ for all row IDs)
+        type: string
+        required: true
+      - schema:
+          $ref: '#/definitions/DemoStats2'
+        in: body
+        name: body
+      tags:
+      - DemoStats2
+      consumes:
+      - application/json
   /:
     get:
       summary: Get user session information
@@ -299,6 +461,66 @@ paths:
         required: false
       tags:
       - session
+  /rest/DemoStats2:
+    get:
+      summary: Search DemoStats2 business object records or get contextualized metadata
+      security:
+      - bearerAuth: []
+      produces:
+      - application/json
+      operationId: obj-demostats2-search
+      responses:
+        '200':
+          schema:
+            $ref: '#/definitions/ArrayOfDemoStats2'
+          description: Success in searching business object records (or in getting
+            contextualized business object metadata, documentation, ...)
+        '401':
+          schema:
+            $ref: '#/definitions/Error401'
+          description: Unauthorized
+        '500':
+          schema:
+            $ref: '#/definitions/Error500'
+          description: Internal server error
+      parameters:
+      - in: query
+        name: _metadata
+        description: Metadata?
+        type: boolean
+        required: false
+      - in: query
+        name: _count
+        description: Count?
+        type: boolean
+        required: false
+      - in: query
+        name: _doc
+        description: Documentation?
+        type: boolean
+        required: false
+      - in: query
+        name: demoPrdName
+        description: Search filter for Product name
+        type: string
+        required: false
+      - in: query
+        name: demoStsCount
+        description: Search filter for Number of orders
+        type: integer
+        required: false
+      - in: query
+        name: demoStsQuantity
+        description: Search filter for Ordered quantities
+        type: integer
+        required: false
+      - in: query
+        name: demoStsAmount
+        description: Search filter for Ordered amount
+        type: number
+        required: false
+      tags:
+      - DemoStats2
 securityDefinitions:
   basicAuth:
     type: basic
@@ -343,6 +565,10 @@ definitions:
       content:
         description: Content (plain text or base64 encoded)
         type: string
+  ArrayOfDemoStats2:
+    type: array
+    items:
+      $ref: '#/definitions/DemoStats2'
   Error400:
     type: object
     properties:
@@ -399,6 +625,24 @@ definitions:
       demoStsQuantity:
         description: Ordered quantities
         type: integer
+  DemoStats2:
+    type: object
+    properties:
+      demoStsCount:
+        description: Number of orders
+        type: integer
+      demoStsAmount:
+        description: Ordered amount
+        type: number
+      row_id:
+        description: Unique technical row ID
+        type: string
+      demoPrdName:
+        description: Product name
+        type: string
+      demoStsQuantity:
+        description: Ordered quantities
+        type: integer
   Error403:
     type: object
     properties:
@@ -425,3 +669,5 @@ info:
 tags:
 - name: DemoStats1
   description: Statistics per statuses
+- name: DemoStats2
+  description: Statistics per product
